# pyarazzo

./: .copier-answers.yml  .gitignore  CHANGELOG.md  Makefile  README.md  duties.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 1-bug.md  config.yml
.github/workflows/: ci.yml  release.yml
config/: ruff.toml
examples/: apply-coupon.md  buy-available-pet.md  pet-coupons-example.yaml  pet-coupons.openapi.yaml  place-order.md
scripts/: gen_credits.py  make  make.py
src/pyarazzo/: __init__.py  __main__.py  cli.py  debug.py  exceptions.py  utils.py
src/pyarazzo/doc/: cmd.py  generator.py
src/pyarazzo/model/: arazzo.py  openapi.py
src/pyarazzo/robot/: __init__.py  cmd.py  robot.py  visitor.py
tests/: test_cli.py  test_doc_generation.py  test_exceptions.py  test_robot_visitor.py  test_utils.py
tests/models/: test_arazzo.py  test_openapi.py
